[metadata]
name = axon
summary = Axon Traffic Service
description-file =
    README.rst
author = VMware Inc
author-email = singhpradeep@vmware.com
classifier =
    Environment :: axon
    Intended Audience :: Developers
    Intended Audience :: QA Developers
    License :: VMware Inc
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    axon