[metadata]
name = vmware-axon
version = 0.0.1
summary = Traffic Validation Service
description-file =
    README.rst
author = VMware Inc
author-email = cqe-hybrid-cloud@vmware.com
classifier =
    Environment :: VMware validation-app-engine
    Intended Audience :: Developers
    Intended Audience :: QA Developers
    License :: VMware Inc
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    axon
